# maigie

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES_PR_TEMPLATES  MAINTAINERS.md  README.md  SECURITY.md  nx.json  package-lock.json  package.json  tsconfig.base.json
.github/ISSUE_TEMPLATE/workflows/: backend-ci.yml
.github/workflows/: backend-ci.yml  backend-test.yml  cloudflare-pages.yml
apps/backend/: .dockerignore  .env.example  .flake8  .gitignore  DEPLOYMENT.md  Dockerfile  EXCEPTION_HANDLING_GUIDE.md  README.md  docker-compose.preview.yml  docker-compose.yml  project.json  pyproject.toml  verify_auth.py  verify_exceptions.py  verify_logging.py  verify_setup.py  verify_websocket.py
apps/backend/prisma/: schema.prisma  seed.py
apps/backend/scripts/: README.md  extract-env-keys.sh  generate-env-from-secrets.sh  load-all-secrets.sh  serve.ps1  verify-websocket.ps1
apps/backend/src/: config.py  dependencies.py  exceptions.py  main.py  middleware.py
apps/backend/src/ai_client/: __init__.py
apps/backend/src/core/: cache.py  database.py  oauth.py  security.py  websocket.py
apps/backend/src/models/: auth.py  error_response.py  websocket.py
apps/backend/src/routes/: ai.py  auth.py  courses.py  examples.py  goals.py  realtime.py  resources.py  schedule.py  users.py
apps/backend/src/services/: email.py  user_service.py
apps/backend/src/templates/email/: reset_password.html  verification.html  verification.txt  welcome.html  welcome.txt
apps/backend/src/utils/: dependencies.py  exceptions.py  logging_config.py  metrics.py
apps/backend/tests/: conftest.py  test_api.py  test_app_setup.py  test_auth.py  test_exception_handling.py  test_password_reset.py
apps/mobile/: README_ENV.md  app.config.js  jest.config.cts  package-lock.json  package.json  tsconfig.app.json  tsconfig.spec.json
apps/mobile/src/app/: _layout.tsx  index.tsx
apps/mobile/src/app/auth/: _layout.tsx  forgot-password.tsx  index.tsx  otp.tsx  reset-password.tsx
apps/mobile/src/app/dashboard/: index.tsx
apps/mobile/src/context/: ApiContext.tsx  AuthContext.tsx
apps/mobile/src/hooks/: useAuth.ts
apps/mobile/src/lib/: colors.ts  endpoints.ts
apps/mobile/src/screens/: AuthScreen.tsx  ForgotPasswordScreen.tsx  OtpScreen.tsx  ResetPasswordScreen.tsx
apps/mobile/src/utils/: api.ts
apps/web/: BREVO_SETUP.md  tailwind.config.js  vite.config.mts
apps/web/src/: main.tsx
apps/web/src/app/: app.tsx
apps/web/src/components/landing/: Community.tsx  Navbar.tsx  Pricing.tsx
apps/web/src/features/auth/components/: AuthButton.tsx  (+7 more)
apps/web/src/pages/: WaitlistPage.tsx
apps/web/src/providers/: QueryProvider.tsx
apps/web/src/services/: brevo.ts
docs/deployment/: cloudflare-pages.md  cloudflare-tunnel-setup.md
docs/requirements/: maigie-frontend-design-guidelines.md
libs/ai/: README.md  package.json
libs/auth/: package.json
libs/db/: package.json
libs/types/: package.json
scripts/: README.md  cleanup-previews.sh  cloudflare-tunnel-routes.sh  setup-cloudflare-tunnel.sh  setup-nginx-routing.sh  vps-setup.sh
(+14 files in other folders)
